--- a/components.json
+++ b/components.json
@@ -4,12 +4,12 @@
   "rsc": true,
   "tailwind": {
     "config": "tailwind.config.js",
-    "css": "@/app/globals.css",
+    "css": "src/app/globals.css",
     "baseColor": "neutral",
     "cssVariables": true
   },
   "aliases": {
-    "components": "@/app/components",
-    "utils": "sanity/lib/utils"
+    "components": "src/app/components",
+    "utils": "lib/utils"
   }
 }
