--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@types/node": "20.3.2",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
+    "@vercel/postgres": "^0.4.0",
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
+    "drizzle-orm": "^0.27.0",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "lucide-react": "^0.252.0",
@@ -27,9 +29,16 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sanity": "^3.12.2",
+    "sharp": "^0.32.1",
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.6",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "@swc/cli": "^0.1.62",
+    "@swc/core": "^1.3.67",
+    "drizzle-kit": "^0.19.2",
+    "swc-loader": "^0.2.3"
   }
 }
